<?xml version="1.0" encoding="utf-8"?>
<TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/textNumViewDefault"
                android:id="@+id/textView"
                android:layout_column="0"
                android:layout_weight="1"
                android:editable="false"
                android:gravity="center_vertical|right"
                android:textSize="40sp"
                android:paddingRight="10sp"/>
    </TableRow>

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/textReset"
                android:id="@+id/resetButton"
                android:layout_weight="0.25"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/textMemoryAdd"
                android:id="@+id/memoryAddButton"
                android:layout_column="1"
                android:layout_weight="0.25"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/textMemoryReturn"
                android:id="@+id/memoryReturnButton"
                android:layout_column="2"
                android:layout_weight="0.25"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/textMemoryClear"
                android:id="@+id/memoryClearButton"
                android:layout_column="3"
                android:layout_weight="0.25"/>
    </TableRow>

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/tableRow"
            android:layout_weight="1">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/text1"
                android:id="@+id/button1"
                android:layout_weight="0.25"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/text2"
                android:id="@+id/button2"
                android:layout_column="1"
                android:layout_weight="0.25"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/text3"
                android:id="@+id/button3"
                android:layout_column="2"
                android:layout_weight="0.25"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/textSqrt"
                android:id="@+id/buttonSqrt"
                android:layout_column="3"
                android:layout_weight="0.25"/>
    </TableRow>

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/tableRow1"
            android:layout_weight="1">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/text4"
                android:id="@+id/button4"
                android:layout_weight="0.25"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/text5"
                android:id="@+id/button5"
                android:layout_column="1"
                android:layout_weight="0.25"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/text6"
                android:id="@+id/button6"
                android:layout_column="2"
                android:layout_weight="0.25"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/textPlus"
                android:id="@+id/buttonPlus"
                android:layout_column="3"
                android:layout_weight="0.25"/>
    </TableRow>

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/tableRow2"
            android:layout_weight="1">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/text7"
                android:id="@+id/button7"
                android:layout_weight="0.25"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/text8"
                android:id="@+id/button8"
                android:layout_column="1"
                android:layout_weight="0.25"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/text9"
                android:id="@+id/button9"
                android:layout_column="2"
                android:layout_weight="0.25"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/textMinus"
                android:id="@+id/buttonMinus"
                android:layout_column="3"
                android:layout_weight="0.25"/>
    </TableRow>

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/tableRow3"
            android:layout_weight="1">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/textPoint"
                android:id="@+id/buttonPoint"
                android:layout_weight="0.25"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/text0"
                android:id="@+id/button0"
                android:layout_column="1"
                android:layout_weight="0.25"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/textMultiply"
                android:id="@+id/buttonMultiply"
                android:layout_column="2"
                android:layout_weight="0.25"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/textDivide"
                android:id="@+id/buttonDivide"
                android:layout_column="3"
                android:layout_weight="0.25"/>
    </TableRow>
</TableLayout>

